# Copyright 2014, Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.  # You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(acpi)
add_subdirectory(arch)
add_subdirectory(bootstrap)
add_subdirectory(dbg)
add_subdirectory(guest)
add_subdirectory(host)
add_subdirectory(ipc)
add_subdirectory(libc)
add_subdirectory(memory)
add_subdirectory(startup)
add_subdirectory(utils)
add_subdirectory(vmexit)
add_subdirectory(vmx)

# We have to put the bootstrap print code here so it can be built as 64-bit.
set(BPRINT_SRCS
    bootstrap/bootstrap_print.c
    bootstrap/bootstrap_string.c
   )

add_library(bprint STATIC ${BPRINT_SRCS})

set(EVMM_LIBS
    acpi
    arch
    bprint
    dbg
    guest
    guest_cpu
    host
    host_hw
    host_hw_em64t
    ipc
    libc
    memory_ept
    memory_manager
    scheduler
    startup
    vmexit
    vmx
    utils
   )

set(CMAKE_EXE_LINKER_FLAGS "-nostdlib -T ${CMAKE_CURRENT_SOURCE_DIR}/evmm.x -fPIE -e vmm_main")
add_executable(evmm.bin vmm.c evmm.x)

target_link_libraries(evmm.bin ${EVMM_LIBS})

